--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-platform-touchable": "^1.1.1",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.8.1",
     "react-redux": "^7.0.2",
